<resources>
    <string name="app_name">Skin change</string>
    <string name="text_input_path">Input the path to iGO Avic</string>
    <string name="text_button_id1">Default skin</string>
    <string name="text_button_id2">Pongo skin</string>
    <string name="text_toast_ok">Save ok!</string>
    <string name="text_toast_no">Path not found!</string>
    <string name="toast_exit">Press once again to exit!</string>
    <string name="toast_succeeded">Succeed</string>
    <string name="text_skin_pongo">Skin pongo include</string>
    <string name="text_skin_default">Skin default include</string>
    <string name="text_for_4pda">Specialli for 4pda</string>
    <string name="text_close_program">Close the program after the change skin</string>
    <string name="text_run_igo">Run iGO Avic</string>
    <string name="text_input_ok">Ok</string>
    <string name="text_toast_notfound">Aplication not found!</string>
    <string name="title_settings">Settings</string>
    <string name="text_button_alt">Alternative skin</string>
    <string name="text_skin_alt">Skin alternative include</string>
</resources>
