<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neos.skinchange.MainActivity"
    android:background="@color/material_grey_800"
    android:transitionGroup="false">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_id1"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:onClick="RenameDirDefault"
        android:clickable="true"
        android:enabled="false"
        android:background="@android:drawable/bottom_bar"
        android:backgroundTint="@android:color/darker_gray" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_id2"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/bottom_bar"
        android:textSize="20sp"
        android:onClick="RenameDirPongo"
        android:clickable="true"
        android:enabled="false"
        android:backgroundTint="@android:color/darker_gray" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/ic_menu_manage"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="#8bc1fe"
        android:textSize="18sp"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:password="@+id/button5"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#0095ff"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/button3"
        android:text="@string/text_for_4pda"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#35fd03"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_alt"
        android:id="@+id/button6"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/bottom_bar"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:enabled="false"
        android:textSize="20sp"
        android:onClick="RenameDirAlt"
        android:backgroundTint="@android:color/darker_gray" />

</RelativeLayout>
