<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neos.skinchange.MainActivity_Settings"
    android:background="#404040">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_input_path"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/app_icon_size"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:inputType="text"
        android:background="#ebebeb"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_alignParentEnd="false"
        android:lines="2"
        android:maxLines="2"
        android:textStyle="bold|italic"
        android:typeface="normal"
        android:layout_marginRight="50dp"
        android:layout_alignParentRight="false"
        tools:ignore="RtlHardcoded" />

    <Button
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:text="@string/text_input_ok"
        android:background="@android:drawable/bottom_bar"
        android:onClick="onClickToastSet"
        android:clickable="true"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_close_program"
        android:id="@+id/textView4"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:lines="2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/editText"
        tools:ignore="RtlHardcoded" />

    <CheckBox
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:id="@+id/checkBox"
        android:onClick="onCheckboxClicked"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:buttonTint="@android:color/holo_green_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@android:dimen/app_icon_size"
        android:text="@string/text_run_igo"
        android:id="@+id/textView5"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginRight="55dp"
        android:gravity="center_vertical"
        tools:ignore="RtlHardcoded" />

    <CheckBox
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:id="@+id/checkBox2"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onCheckboxRunApp"
        app:buttonTint="@android:color/holo_green_light" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="@dimen/abc_action_bar_progress_bar_size"
        android:id="@+id/spinnerPack"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#979797" />

</RelativeLayout>
